objects/Business_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Registrations</relationshipLabel>
        <relationshipName>Business_Registrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Automotive_Expiration_Date__c</fullName>
        <label>Automotive Exp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <description>this field is used to store the Dealer&apos;s address in that state of Business Registration</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Builders_Risk_Expiration__c</fullName>
        <label>Builders Risk Exp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>this is used to capture the city of the partner in a particular state</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Excess_Liability_Exp__c</fullName>
        <label>Excess Liability Exp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Notification_Recipient__c</fullName>
        <label>Expiration Notification Recipient</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expires_On__c</fullName>
        <description>this is used to capture the contractors license expiration date</description>
        <label>Contractors Lic Exp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External1__c</fullName>
        <externalId>true</externalId>
        <label>External1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Carrier__c</fullName>
        <description>Case# 00514638. As per Tom Dowley request. It is added to Business registration page layout.</description>
        <label>Insurance Carrier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_License_Valid__c</fullName>
        <formula>AND(
OR(ISNULL(Expires_On__c),Expires_On__c  &gt;= Today()),
OR(ISNULL(Automotive_Expiration_Date__c) ,Automotive_Expiration_Date__c &gt;= Today()),
OR(ISNULL(Site_General_Liability_Exp__c),Site_General_Liability_Exp__c &gt;= Today()),
OR(ISNULL(Site_Worker_Comp_Exp__c),Site_Worker_Comp_Exp__c &gt;= Today()),
OR(ISNULL(Builders_Risk_Expiration__c),Builders_Risk_Expiration__c &gt;= Today()),
OR(ISNULL(Excess_Liability_Exp__c),Excess_Liability_Exp__c &gt;= Today())
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is License Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_CIty__c</fullName>
        <description>This field is used to store license city of business registration</description>
        <label>License CIty</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>Contractors License #</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_County__c</fullName>
        <description>Case# 00514638. This field is created as per Thomas Dowley request.  As partners expand their business - specifically lease business - into other states, we need to be able to capture compliance data per state. The business registration record was created for this very purpose.</description>
        <label>Oracle County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RAC_Notes__c</fullName>
        <label>RAC Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <description>Case# 00514638. As per Tom Dowley request.This field is used in Business registration page.</description>
        <label>Site Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contractors_Lic1__c</fullName>
        <description>Case# 00514638. This field is created as per Tom Dowley request. As partners expand their business - specifically lease business - into other states, we need to be able to capture compliance data per state. The business registration record was created for this very purpose. Changing the date type to text data type from Number data type.</description>
        <label>Site Contractors Lic#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contractors_Lic_Exp__c</fullName>
        <description>Case# 00514638.This field is created as per Tom Dowley request. As partners expand their business - specifically lease business - into other states, we need to be able to capture compliance data per state. The business registration record was created for this very purpose.</description>
        <label>Site Contractors Lic Exp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_General_Liability_Exp__c</fullName>
        <description>Case# 00514638. This field is created ass per Tom Dowley request. As partners expand their business - specifically lease business - into other states, we need to be able to capture compliance data per state. The business registration record was created for this very purpose.</description>
        <label>General Liability Exp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Worker_Comp_Exp__c</fullName>
        <description>Case# 514638. This field is created as per Tom Dowley request.As partners expand their business - specifically lease business - into other states, we need to be able to capture compliance data per state. The business registration record was created for this very purpose.</description>
        <label>Workers Comp Exp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>This field is used to store the state in which the Partner has business license or simply it tells the license state</description>
        <label>License State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>This is used to capture the Billing street of the Partner in a particular state</description>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Business Registration</label>
    <nameField>
        <label>Business Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>